# PDE_all_in_one

Fabio/: condition.cpp
Fabio/Heat_convergence/src/: Heat.cpp  Heat.hpp  exercise-01.cpp
Fabio/dd_1d/: CMakeLists.txt  Poisson1D_DN.cpp  Poisson1D_DN.hpp  exercise-02.cpp
Fabio/exams/feb24/: CMakeLists.txt  Poisson2D.cpp  Poisson2D.hpp  primo.cpp
Fabio/exams/feb25/: CMakeLists.txt  Poisson1D.cpp  Poisson1D.hpp  primo.cpp
Fabio/exams/gen24/: CMakeLists.txt  Heat.cpp  Heat.hpp  Stokes.cpp  Stokes.hpp  exercise-01.cpp  stoke.cpp
Fabio/exams/gen25/: solver.cpp  solver.hpp
Fabio/exams/june24/: CMakeLists.txt  Heat.cpp  Heat.hpp  exercise-01.cpp
Fabio/lab-01/: CMakeLists.txt
Fabio/lab-01/src/: Poisson1Dmine.cpp  myex.cpp  myex2.cpp
Fabio/lab-03/: CMakeLists.txt
Fabio/navier-stokes/: navier.cpp  navier.hpp  navier_runner.cpp
Fabio/stokestimedependet/: CMakeLists.txt  Stokes.cpp  Stokes.hpp  stokes_tdep.cpp
Fede e Ale/all_possibilities/: CMakeLists.txt  main.cpp  make_build_folders.sh  provenience.txt  run.sh
Fede e Ale/all_possibilities/non_linear/NonLinear_parabolic_1D/: CMakeLists.txt
Fede e Ale/all_possibilities/non_linear/NonLinear_parabolic_1D/mesh/: mesh-1.vtk  mesh-100.vtk  mesh-15.vtk  mesh-3.vtk  mesh-499.vtk  mesh-7.vtk  mesh-8.vtk  mesh-99.vtk
Fede e Ale/all_possibilities/non_linear/NonLinear_parabolic_1D/src/: NonLinearParabolic1D.cpp  NonLinearParabolic1D.hpp  main.cpp
Lore/Febbraio24/: CMakeLists.txt
Lore/Febbraio25/: CMakeLists.txt
Lore/Gennaio24/: CMakeLists.txt
Lore/Giugno24/: CMakeLists.txt
Lore/Giugno25/: CMakeLists.txt
(+184 files in other folders)
